--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
     "classnames": "2.2.6",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "history": "4.10.1",
     "moment": "2.26.0",
     "node-sass": "4.14.1",
+    "nodemailer": "^6.4.18",
     "nouislider": "14.5.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.2",
     "react-slick": "0.26.1",
     "react-swipeable-views": "0.13.9"
   },
@@ -26,7 +29,9 @@
     "@babel/plugin-proposal-class-properties": "7.10.1",
     "@babel/preset-env": "7.10.1",
     "@babel/preset-react": "7.10.1",
+    "eslint": "^7.20.0",
     "eslint-config-prettier": "6.11.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-react": "7.20.0",
     "gulp": "4.0.2",
